Error
yacc -d -t -v -b y -d -t -v -b y parse.y 
mv -f y.tab.c parse.c
cc -g -Wall -O2   -c -o parse.o parse.c
flex  -t scan.l > scan.c
cc -g -Wall -O2   -c -o scan.o scan.c
<stdout>:1211:16: warning: ‘input’ defined but not used [-Wunused-function]
<stdout>:1168:17: warning: ‘yyunput’ defined but not used [-Wunused-function]
cc -g -Wall -O2   -c -o main.o main.c
cc -g -Wall -O2   -c -o execute.o execute.c
execute.c: In function ‘run_pipeline’:
execute.c:59:16: error: wrong type argument to unary exclamation mark
   59 |     if (!pl || !pl->first_command) return -1;
      |                ^
execute.c:60:27: error: incompatible types when initializing type ‘struct command *’ using type ‘struct command’
   60 |     struct command *cmd = pl->first_command;
      |                           ^~
execute.c:65:9: warning: unused variable ‘status’ [-Wunused-variable]
   65 |     int status = 0;
      |         ^~~~~~
make: *** [<builtin>: execute.o] Error 1

